fork: hide to-field with fixed value

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
 <body>
     <form action="/send-email" id="form" method="POST">
         <label for="to">To</label>
-        <input type="email" name="to" class="inp">
+        <input type="email" id="to" name="to" value="kylestech95@gmail.com" class="inp">
         <label for="from">From</label>
-        <input type="email" name="from" value="kylestech95@gmail.com" class="inp">
+        <input type="email" name="from" value="" class="inp" required>
         <label for="to">Cc</label>
         <input type="email" name="cc" class="inp">
         <label for="to">Bcc</label>
