--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,17 @@
 <body>
     <h2 id="email-title">Send me a Message</h2>
     <form action="/send-email" id="form" method="POST">
-        <label for="to">To</label>
-        <input type="email" id="to" name="to" class="inp">
-        <label for="to">To</label>
-        <input type="email" id="to1" name="to" class="inp">
+        <label for="to" class="not-visible">To</label>
+        <input type="email" id="to-input" name="to" class="inp not-visible">
+        <!-- <label for="to">To</label>
+        <input type="email" id="to1" name="to" class="inp"> -->
         <label for="from">From</label>
         <!-- Set the from-value to match which mailbox you are utilizing -->
         <input type="email" name="from" class="inp" >
-        <label for="to">Cc</label>
-        <input type="email" name="cc" class="inp">
-        <label for="to">Bcc</label>
-        <input type="email" name="bcc" class="inp">
+        <!-- <label for="to">Cc</label>
+        <input type="email" name="cc" class="inp"> -->
+        <!-- <label for="to">Bcc</label> -->
+        <!-- <input type="email" name="bcc" class="inp"> -->
         <label for="subject">Subject</label>
         <input type="text" name="subject" class="inp">
         <label for="message">Message</label>
@@ -29,4 +29,5 @@
         <input type="file" name="file" id="filer" accept="image/png, image/jpeg" multiple="multiple">
     </form>
 </body>
+<script src="main.js" type="module"></script>
 </html>
