--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,19 @@
 <body>
     <h2 id="email-title">Send me a Message</h2>
     <form action="/send-email" id="form" method="POST">
+        <!-- Set the to-value to match which mailbox you are utilizing -->
         <label for="to" class="not-visible">To</label>
-        <input type="email" id="to-input" name="to" class="inp not-visible">
+        <input type="password" id="to" name="to" class="inp not-visible" readonly>
         <!-- <label for="to">To</label>
         <input type="email" id="to1" name="to" class="inp"> -->
         <label for="from">From</label>
-        <!-- Set the from-value to match which mailbox you are utilizing -->
-        <input type="email" name="from" class="inp" >
+        <input type="email" name="from" class="inp" id="from" >
         <!-- <label for="to">Cc</label>
         <input type="email" name="cc" class="inp"> -->
         <!-- <label for="to">Bcc</label> -->
         <!-- <input type="email" name="bcc" class="inp"> -->
         <label for="subject">Subject</label>
-        <input type="text" name="subject" class="inp">
+        <input type="text" name="subject" class="inp" id="subject">
         <label for="message">Message</label>
         <textarea id="message" name="message" class="inp"></textarea>
 
