obtain files from filesystem onclick

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
     
             <div class="form-button-container">
                 <input type="file" name="file" id="filer" accept="image/png, image/jpeg" multiple="multiple" class="btn-inp">
-                <input value="Send" type="submit" class="btn-inp">
+                <input value="Send" id="send-submit" type="submit" class="btn-inp">
             </div>
             
 
