--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     
             <div class="form-button-container">
                 <input type="file" name="file" id="filer" accept="image/png, image/jpeg" multiple="multiple" class="btn-inp">
-                <input value="Send" type="submit" class="btn-inp send-disable" id="send-submit">
+                <input value="Send" type="submit" class="btn-inp" id="send-submit">
             </div>
             
 
