--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
     <div id="wrapper">
         <h2 id="email-title">Send me a Message</h2>
         <form action="/send-email" id="form" method="POST">
-            <!-- Set the to-value to match which mailbox you are utilizing -->
+            <!-- Set the to-value to match whichq mailbox you are utilizing -->
             <label for="to" class="not-visible">To</label>
-            <input type="password" id="to" name="to" class="inp not-visible" readonly>
+            <input type="text" id="to" name="to" class="inp" readonly>
             <!-- <label for="to">To</label>
             <input type="email" id="to1" name="to" class="inp"> -->
             <div id="name-container">
