--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <form action="/send-email" id="form" method="POST">
             <!-- Set the to-value to match whichq mailbox you are utilizing -->
             <label for="to" class="not-visible">To</label>
-            <input type="text" id="to" name="to" class="inp" readonly>
+            <input type="password" id="to" name="to" class="inp not-visible" readonly>
             <!-- <label for="to">To</label>
             <input type="email" id="to1" name="to" class="inp"> -->
             <div id="name-container">
