faet: file types

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
             </div>
     
             <div class="form-button-container">
-                <input type="file" name="file" id="filer" accept="image/png, image/jpeg" multiple="multiple" class="btn-inp">
+                <input type="file" name="file" id="filer" accept="image/png, image/jpeg,image/webp,image/wmf" multiple="multiple" class="btn-inp">
                 <input value="Send" type="submit" class="btn-inp" id="send-submit">
             </div>
             
